src/ts/tests/fixtures/invalid_include_tree/nonself_reference.cloesce.ts
// @ts-nocheck
// InvalidDataSourceDefinition

@Model
export class Bar {
  @PrimaryKey
  id: number;
}

@Model
export class Foo {
  @PrimaryKey
  id: number;

  @DataSource
  static readonly default: IncludeTree<Bar> = {};
}
